<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rental_tax_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo2"
        android:layout_centerHorizontal="true"
        app:civ_border_width="2dp"
        app:civ_border_color="#3F51B5"/>


    <TextView
        android:id="@+id/RentalTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rental_tax_image"
        android:textColor="@android:color/black"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/RentPerMonth"/>

    <EditText
        android:id="@+id/RentalEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RentalTextview"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/MonthsTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RentalEdittext"
        android:textColor="@android:color/black"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/NumberofMonths"/>

    <EditText
        android:id="@+id/MonthsEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MonthsTextview"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:inputType="numberDecimal"/>


    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        android:padding="14dp"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/MonthsEdittext"
        android:layout_alignRight="@+id/MonthsEdittext"
        android:textColor="@android:color/white"
        android:background="@drawable/button_styling"
        android:onClick="CalculateTax_Click"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculate"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:text="@string/AnnualRent"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:id="@+id/textAnnualRent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculate"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:text="--"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/textAnnualRent"
        android:layout_marginRight="40dp"
        android:textSize="20dp"
        android:id="@+id/valueAnnualRent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAnnualRent"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:text="@string/MonthlyTaxLiability"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:id="@+id/textMonthlyLiability"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAnnualRent"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:text="--"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/textMonthlyLiability"
        android:layout_marginRight="40dp"
        android:textSize="20dp"
        android:id="@+id/valueMonthlyLiability"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMonthlyLiability"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:text="@string/AnnaulTaxLiability"
        android:layout_marginLeft="30dp"
        android:textSize="20dp"
        android:id="@+id/textAnnualLiability"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMonthlyLiability"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:text="--"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/textAnnualLiability"
        android:layout_marginRight="40dp"
        android:textSize="20dp"
        android:id="@+id/valueAnnualLiability"
        />


</RelativeLayout>
